assets/src/components/routes/ConnectionActions/ConnectionActions.css
.connection-actions {
	margin-top: 30px;
}

.connection-actions__no-action {
	box-shadow: var(--sl-shadow-small);
	border-radius: 5px;
}

.connection-actions__instructions {
	margin-bottom: 50px;
}

.connection-actions__instructions-text a {
	color: var(--sl-color-primary-600);
	display: block;
	font-weight: 600;
	margin-top: 10px;
	width: max-content;
}

.connection-actions__action-type {
	margin: auto;
	border-bottom: 0 !important;
	border-radius: 0 !important;
}

.connection-actions__action-type:first-child {
	border-top-left-radius: var(--radius) !important;
	border-top-right-radius: var(--radius) !important;
}

.connection-actions__action-type:last-child {
	margin-bottom: 0 !important;
	border-bottom: 1px solid var(--sl-color-neutral-200) !important;
	border-bottom-left-radius: var(--radius) !important;
	border-bottom-right-radius: var(--radius) !important;
}

.connection-actions .section {
	max-width: 1600px;
}

.connection-actions .grid {
	margin-top: 10px;
}

.connection-actions__add::part(base) {
	min-height: unset;
}

.connection-actions__add::part(label) {
	line-height: 1;
	padding-left: 0;
}

.connection-actions__action-name {
	display: flex;
	gap: 8px;
}

.connection-actions__action-logo svg {
	height: 20px;
}

.connection-actions__action-name-description {
	font-size: 14px;
	color: #777;
}

.connection-actions__action-filter > div {
	font-size: 12px;
	opacity: 0.7;
	font-family: var(--monospace-fonts);
}

.connection-actions__buttons {
	display: flex;
	gap: 10px;
	justify-content: end;
}

.connection-actions__execution-info-title {
	font-weight: 500;
	font-size: 13px;
}

.connection-actions__execution-info ul {
	padding-left: 17px;
	margin-top: 5px;
	margin-bottom: 5px;
}

.connection-actions__buttons .feedback-button__tooltip-content {
	min-width: 300px;
}

.connection-actions__buttons .feedback-button__tooltip-content--info {
	padding-top: 27px;
}

.connection-actions__scheduler-button::part(base) {
	min-width: 132px;
	justify-content: left;
}

.connection-actions__scheduler-button::part(suffix) {
	margin-left: auto;
}

.connection-actions__scheduler-button::part(label) {
	padding-right: 6px;
}

.connection-actions__scheduler-dot {
	font-size: 8px;
	color: var(--sl-color-neutral-400);
	transition: color 0.3s;
}

.connection-actions__scheduler-dot--success {
	color: var(--sl-color-success-600);
}

.connection-actions__scheduler-options {
	padding-left: 20px;
	padding-right: 20px;
}

.connection-actions__run-button > sl-icon[name='play'] {
	font-size: 16px;
}

.connection-actions__dialog::part(body) {
	padding-bottom: 30px;
}

.connection-actions__dialog .list-tile {
	margin-bottom: 15px;
}

.connection-actions__dialog .list-tile:last-child {
	margin-bottom: 0;
}

.connection-actions__dialog-event-action-types-title {
	font-weight: 600;
	margin-top: 25px;
	margin-bottom: 10px;
}

.connection-actions__link-to-overview {
	margin-top: 10px;
}

.connection-actions__link {
	color: var(--sl-color-primary-500);
	text-decoration: underline;
	cursor: pointer;
	font-weight: 600;
}

.connection-actions__linked {
	margin-top: 50px;
}

.connection-actions__linked .linked-connection-selector__head-title {
	font-weight: 600;
}

